# moofwd-guard

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  railway.json
api/: main.py
api/adapters/: bin_lookup.py  ipqs.py
api/core/: config.py  dependencies.py  redis_client.py
api/models/: identity.py  request.py
api/routers/: dashboard.py  signals.py
api/services/: aggregator.py  suspicious.py
docs/: LOCAL_SETUP_MACOS.md
scripts/: sample_transactions.py  simulate_fraud.py
static/: demo-checkout.html  moofwd-tracker.js
tests/integration/: test_aggregator.py
tests/unit/: test_adapters.py  test_identity_models.py
